crates/biome_html_parser/tests/html_specs/ok/svelte/await_shorthand_missing_binding.svelte
{#await promise then}
  <p>Done!</p>
{/await}
