crates/biome_html_parser/tests/html_specs/error/svelte/await_missing_then_binding.svelte
{#await promise}
  <p>Loading...</p>
{:then}
  <p>Done!</p>
{/await}
